minijavaParser.java
/* Generated By:JavaCC: Do not edit this line. minijavaParser.java */
import java.io.*;

public class minijavaParser implements minijavaParserConstants {

    public static void main(String[] args) {

        if (args.length < 1) {
            System.out.println("Please pass in the filename for a parameter.");
            System.exit(1);
        }

        try{
            SimpleCharStream stream = new SimpleCharStream(new FileInputStream(args[0]), 0, 0);
            Token temp_token = null;
            minijavaParserTokenManager TkMgr = new minijavaParserTokenManager(stream);
            minijavaParser parser = new minijavaParser(TkMgr) ;
            parser.Start() ;
        } catch (FileNotFoundException e) {
            System.err.println("File not found: " + args[0]);
            System.exit(1);
        } catch (ParseException e) {
            System.err.println(e.getMessage());
            System.exit(1);
        } catch (TokenMgrError e) {
            System.err.println(e.getMessage());
            System.exit(1);
        }

        System.out.println("The syntax is correct!");
    }

  static final public void Start() throws ParseException {
    Program();
    jj_consume_token(0);
  }

  static final public void Exp() throws ParseException {
    if (jj_2_10(3)) {
      jj_consume_token(INTEGER_LITERAL);
      if (jj_2_1(3)) {
        Exp1();
      } else {
        ;
      }
    } else if (jj_2_11(3)) {
      jj_consume_token(TRUE);
      if (jj_2_2(3)) {
        Exp1();
      } else {
        ;
      }
    } else if (jj_2_12(3)) {
      jj_consume_token(FALSE);
      if (jj_2_3(3)) {
        Exp1();
      } else {
        ;
      }
    } else if (jj_2_13(3)) {
      jj_consume_token(IDENTIFIER);
      if (jj_2_4(3)) {
        Exp1();
      } else {
        ;
      }
    } else if (jj_2_14(3)) {
      jj_consume_token(THIS);
      if (jj_2_5(3)) {
        Exp1();
      } else {
        ;
      }
    } else if (jj_2_15(3)) {
      jj_consume_token(NEW);
      jj_consume_token(INT);
      jj_consume_token(LBRACKET);
      Exp();
      jj_consume_token(RBRACKET);
      if (jj_2_6(3)) {
        Exp1();
      } else {
        ;
      }
    } else if (jj_2_16(3)) {
      jj_consume_token(NEW);
      jj_consume_token(IDENTIFIER);
      jj_consume_token(LPARENS);
      jj_consume_token(RPARENS);
      if (jj_2_7(3)) {
        Exp1();
      } else {
        ;
      }
    } else if (jj_2_17(3)) {
      jj_consume_token(NEGATE);
      Exp();
      if (jj_2_8(3)) {
        Exp1();
      } else {
        ;
      }
    } else if (jj_2_18(3)) {
      jj_consume_token(LPARENS);
      Exp();
      jj_consume_token(RPARENS);
      if (jj_2_9(3)) {
        Exp1();
      } else {
        ;
      }
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void Exp1() throws ParseException {
    if (jj_2_28(3)) {
      jj_consume_token(PLUS);
      Exp();
      if (jj_2_19(3)) {
        Exp1();
      } else {
        ;
      }
    } else if (jj_2_29(3)) {
      jj_consume_token(MINUS);
      Exp();
      if (jj_2_20(3)) {
        Exp1();
      } else {
        ;
      }
    } else if (jj_2_30(3)) {
      jj_consume_token(MULTIPLY);
      Exp();
      if (jj_2_21(3)) {
        Exp1();
      } else {
        ;
      }
    } else if (jj_2_31(3)) {
      jj_consume_token(LESS_THAN);
      Exp();
      if (jj_2_22(3)) {
        Exp1();
      } else {
        ;
      }
    } else if (jj_2_32(3)) {
      jj_consume_token(AND);
      Exp();
      if (jj_2_23(3)) {
        Exp1();
      } else {
        ;
      }
    } else if (jj_2_33(3)) {
      jj_consume_token(LBRACKET);
      Exp();
      jj_consume_token(RBRACKET);
      if (jj_2_24(3)) {
        Exp1();
      } else {
        ;
      }
    } else if (jj_2_34(3)) {
      jj_consume_token(DOT);
      jj_consume_token(LENGTH);
      if (jj_2_25(3)) {
        Exp1();
      } else {
        ;
      }
    } else if (jj_2_35(3)) {
      jj_consume_token(DOT);
      jj_consume_token(IDENTIFIER);
      jj_consume_token(LPARENS);
      if (jj_2_26(3)) {
        ExpList();
      } else {
        ;
      }
      jj_consume_token(RPARENS);
      if (jj_2_27(3)) {
        Exp1();
      } else {
        ;
      }
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void ExpRest() throws ParseException {
    jj_consume_token(COMMA);
    Exp();
  }

  static final public void ExpList() throws ParseException {
    Exp();
    label_1:
    while (true) {
      if (jj_2_36(3)) {
        ;
      } else {
        break label_1;
      }
      ExpRest();
    }
  }

  static final public void Program() throws ParseException {
    MainClass();
    label_2:
    while (true) {
      if (jj_2_37(3)) {
        ;
      } else {
        break label_2;
      }
      ClassDecl();
    }
  }

  static final public void MainClass() throws ParseException {
    jj_consume_token(CLASS);
    jj_consume_token(IDENTIFIER);
    jj_consume_token(L_C_BRACKET);
    jj_consume_token(PUBLIC);
    jj_consume_token(STATIC);
    jj_consume_token(VOID);
    jj_consume_token(MAIN);
    jj_consume_token(LPARENS);
    jj_consume_token(STRING);
    jj_consume_token(LBRACKET);
    jj_consume_token(RBRACKET);
    jj_consume_token(IDENTIFIER);
    jj_consume_token(RPARENS);
    jj_consume_token(L_C_BRACKET);
    Statement();
    jj_consume_token(R_C_BRACKET);
    jj_consume_token(R_C_BRACKET);
  }

  static final public void ClassDecl() throws ParseException {
    jj_consume_token(CLASS);
    jj_consume_token(IDENTIFIER);
    if (jj_2_38(3)) {
      jj_consume_token(EXTENDS);
      jj_consume_token(IDENTIFIER);
    } else {
      ;
    }
    jj_consume_token(L_C_BRACKET);
    label_3:
    while (true) {
      if (jj_2_39(3)) {
        ;
      } else {
        break label_3;
      }
      VarDecl();
    }
    label_4:
    while (true) {
      if (jj_2_40(3)) {
        ;
      } else {
        break label_4;
      }
      MethodDecl();
    }
    jj_consume_token(R_C_BRACKET);
  }

  static final public void VarDecl() throws ParseException {
    Type();
    jj_consume_token(IDENTIFIER);
    jj_consume_token(SEMI_COMMA);
  }

  static final public void MethodDecl() throws ParseException {
    jj_consume_token(PUBLIC);
    Type();
    jj_consume_token(IDENTIFIER);
    jj_consume_token(LPARENS);
    if (jj_2_41(3)) {
      FormalList();
    } else {
      ;
    }
    jj_consume_token(RPARENS);
    jj_consume_token(L_C_BRACKET);
    label_5:
    while (true) {
      if (jj_2_42(3)) {
        ;
      } else {
        break label_5;
      }
      VarDecl();
    }
    label_6:
    while (true) {
      if (jj_2_43(3)) {
        ;
      } else {
        break label_6;
      }
      Statement();
    }
    jj_consume_token(RETURN);
    Exp();
    jj_consume_token(SEMI_COMMA);
    jj_consume_token(R_C_BRACKET);
  }

  static final public void FormalList() throws ParseException {
    Type();
    jj_consume_token(IDENTIFIER);
    label_7:
    while (true) {
      if (jj_2_44(3)) {
        ;
      } else {
        break label_7;
      }
      FormalRest();
    }
  }

  static final public void FormalRest() throws ParseException {
    jj_consume_token(COMMA);
    Type();
    jj_consume_token(IDENTIFIER);
  }

  static final public void Type() throws ParseException {
    if (jj_2_45(3)) {
      jj_consume_token(INT);
      jj_consume_token(LBRACKET);
      jj_consume_token(RBRACKET);
    } else if (jj_2_46(3)) {
      jj_consume_token(BOOLEAN);
    } else if (jj_2_47(3)) {
      jj_consume_token(INT);
    } else if (jj_2_48(3)) {
      jj_consume_token(IDENTIFIER);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void Statement() throws ParseException {
    if (jj_2_50(3)) {
      jj_consume_token(L_C_BRACKET);
      label_8:
      while (true) {
        if (jj_2_49(3)) {
          ;
        } else {
          break label_8;
        }
        Statement();
      }
      jj_consume_token(R_C_BRACKET);
    } else if (jj_2_51(3)) {
      jj_consume_token(IF);
      jj_consume_token(LPARENS);
      Exp();
      jj_consume_token(RPARENS);
      Statement();
      jj_consume_token(ELSE);
      Statement();
    } else if (jj_2_52(3)) {
      jj_consume_token(WHILE);
      Exp();
      Statement();
    } else if (jj_2_53(3)) {
      jj_consume_token(PRINT);
      jj_consume_token(LPARENS);
      Exp();
      jj_consume_token(RPARENS);
      jj_consume_token(SEMI_COMMA);
    } else if (jj_2_54(3)) {
      jj_consume_token(IDENTIFIER);
      jj_consume_token(ASSIGN);
      Exp();
      jj_consume_token(SEMI_COMMA);
    } else if (jj_2_55(3)) {
      jj_consume_token(IDENTIFIER);
      jj_consume_token(LBRACKET);
      Exp();
      jj_consume_token(RBRACKET);
      jj_consume_token(ASSIGN);
      Exp();
      jj_consume_token(SEMI_COMMA);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  static private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  static private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  static private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  static private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  static private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  static private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  static private boolean jj_2_10(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  static private boolean jj_2_11(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_11(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  static private boolean jj_2_12(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_12(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  static private boolean jj_2_13(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_13(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  static private boolean jj_2_14(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_14(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  static private boolean jj_2_15(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_15(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  static private boolean jj_2_16(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_16(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  static private boolean jj_2_17(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_17(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(16, xla); }
  }

  static private boolean jj_2_18(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_18(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(17, xla); }
  }

  static private boolean jj_2_19(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_19(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(18, xla); }
  }

  static private boolean jj_2_20(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_20(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(19, xla); }
  }

  static private boolean jj_2_21(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_21(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(20, xla); }
  }

  static private boolean jj_2_22(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_22(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(21, xla); }
  }

  static private boolean jj_2_23(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_23(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(22, xla); }
  }

  static private boolean jj_2_24(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_24(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(23, xla); }
  }

  static private boolean jj_2_25(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_25(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(24, xla); }
  }

  static private boolean jj_2_26(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_26(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(25, xla); }
  }

  static private boolean jj_2_27(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_27(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(26, xla); }
  }

  static private boolean jj_2_28(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_28(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(27, xla); }
  }

  static private boolean jj_2_29(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_29(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(28, xla); }
  }

  static private boolean jj_2_30(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_30(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(29, xla); }
  }

  static private boolean jj_2_31(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_31(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(30, xla); }
  }

  static private boolean jj_2_32(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_32(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(31, xla); }
  }

  static private boolean jj_2_33(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_33(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(32, xla); }
  }

  static private boolean jj_2_34(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_34(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(33, xla); }
  }

  static private boolean jj_2_35(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_35(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(34, xla); }
  }

  static private boolean jj_2_36(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_36(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(35, xla); }
  }

  static private boolean jj_2_37(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_37(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(36, xla); }
  }

  static private boolean jj_2_38(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_38(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(37, xla); }
  }

  static private boolean jj_2_39(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_39(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(38, xla); }
  }

  static private boolean jj_2_40(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_40(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(39, xla); }
  }

  static private boolean jj_2_41(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_41(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(40, xla); }
  }

  static private boolean jj_2_42(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_42(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(41, xla); }
  }

  static private boolean jj_2_43(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_43(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(42, xla); }
  }

  static private boolean jj_2_44(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_44(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(43, xla); }
  }

  static private boolean jj_2_45(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_45(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(44, xla); }
  }

  static private boolean jj_2_46(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_46(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(45, xla); }
  }

  static private boolean jj_2_47(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_47(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(46, xla); }
  }

  static private boolean jj_2_48(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_48(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(47, xla); }
  }

  static private boolean jj_2_49(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_49(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(48, xla); }
  }

  static private boolean jj_2_50(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_50(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(49, xla); }
  }

  static private boolean jj_2_51(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_51(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(50, xla); }
  }

  static private boolean jj_2_52(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_52(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(51, xla); }
  }

  static private boolean jj_2_53(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_53(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(52, xla); }
  }

  static private boolean jj_2_54(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_54(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(53, xla); }
  }

  static private boolean jj_2_55(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_55(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(54, xla); }
  }

  static private boolean jj_3R_16() {
    if (jj_3R_19()) return true;
    if (jj_scan_token(IDENTIFIER)) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3_44()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  static private boolean jj_3R_15() {
    if (jj_scan_token(PUBLIC)) return true;
    if (jj_3R_19()) return true;
    if (jj_scan_token(IDENTIFIER)) return true;
    return false;
  }

  static private boolean jj_3_43() {
    if (jj_3R_17()) return true;
    return false;
  }

  static private boolean jj_3R_14() {
    if (jj_3R_19()) return true;
    if (jj_scan_token(IDENTIFIER)) return true;
    if (jj_scan_token(SEMI_COMMA)) return true;
    return false;
  }

  static private boolean jj_3_26() {
    if (jj_3R_11()) return true;
    return false;
  }

  static private boolean jj_3_37() {
    if (jj_3R_13()) return true;
    return false;
  }

  static private boolean jj_3_24() {
    if (jj_3R_9()) return true;
    return false;
  }

  static private boolean jj_3R_13() {
    if (jj_scan_token(CLASS)) return true;
    if (jj_scan_token(IDENTIFIER)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_38()) jj_scanpos = xsp;
    if (jj_scan_token(L_C_BRACKET)) return true;
    return false;
  }

  static private boolean jj_3_6() {
    if (jj_3R_9()) return true;
    return false;
  }

  static private boolean jj_3_7() {
    if (jj_3R_9()) return true;
    return false;
  }

  static private boolean jj_3_42() {
    if (jj_3R_14()) return true;
    return false;
  }

  static private boolean jj_3_36() {
    if (jj_3R_12()) return true;
    return false;
  }

  static private boolean jj_3_22() {
    if (jj_3R_9()) return true;
    return false;
  }

  static private boolean jj_3_25() {
    if (jj_3R_9()) return true;
    return false;
  }

  static private boolean jj_3_9() {
    if (jj_3R_9()) return true;
    return false;
  }

  static private boolean jj_3_21() {
    if (jj_3R_9()) return true;
    return false;
  }

  static private boolean jj_3R_11() {
    if (jj_3R_10()) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3_36()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  static private boolean jj_3_23() {
    if (jj_3R_9()) return true;
    return false;
  }

  static private boolean jj_3_20() {
    if (jj_3R_9()) return true;
    return false;
  }

  static private boolean jj_3_40() {
    if (jj_3R_15()) return true;
    return false;
  }

  static private boolean jj_3_19() {
    if (jj_3R_9()) return true;
    return false;
  }

  static private boolean jj_3R_12() {
    if (jj_scan_token(COMMA)) return true;
    if (jj_3R_10()) return true;
    return false;
  }

  static private boolean jj_3_8() {
    if (jj_3R_9()) return true;
    return false;
  }

  static private boolean jj_3_35() {
    if (jj_scan_token(DOT)) return true;
    if (jj_scan_token(IDENTIFIER)) return true;
    if (jj_scan_token(LPARENS)) return true;
    return false;
  }

  static private boolean jj_3_34() {
    if (jj_scan_token(DOT)) return true;
    if (jj_scan_token(LENGTH)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_25()) jj_scanpos = xsp;
    return false;
  }

  static private boolean jj_3_33() {
    if (jj_scan_token(LBRACKET)) return true;
    if (jj_3R_10()) return true;
    if (jj_scan_token(RBRACKET)) return true;
    return false;
  }

  static private boolean jj_3_1() {
    if (jj_3R_9()) return true;
    return false;
  }

  static private boolean jj_3_32() {
    if (jj_scan_token(AND)) return true;
    if (jj_3R_10()) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_23()) jj_scanpos = xsp;
    return false;
  }

  static private boolean jj_3_4() {
    if (jj_3R_9()) return true;
    return false;
  }

  static private boolean jj_3_31() {
    if (jj_scan_token(LESS_THAN)) return true;
    if (jj_3R_10()) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_22()) jj_scanpos = xsp;
    return false;
  }

  static private boolean jj_3_39() {
    if (jj_3R_14()) return true;
    return false;
  }

  static private boolean jj_3_30() {
    if (jj_scan_token(MULTIPLY)) return true;
    if (jj_3R_10()) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_21()) jj_scanpos = xsp;
    return false;
  }

  static private boolean jj_3_29() {
    if (jj_scan_token(MINUS)) return true;
    if (jj_3R_10()) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_20()) jj_scanpos = xsp;
    return false;
  }

  static private boolean jj_3R_9() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_28()) {
    jj_scanpos = xsp;
    if (jj_3_29()) {
    jj_scanpos = xsp;
    if (jj_3_30()) {
    jj_scanpos = xsp;
    if (jj_3_31()) {
    jj_scanpos = xsp;
    if (jj_3_32()) {
    jj_scanpos = xsp;
    if (jj_3_33()) {
    jj_scanpos = xsp;
    if (jj_3_34()) {
    jj_scanpos = xsp;
    if (jj_3_35()) return true;
    }
    }
    }
    }
    }
    }
    }
    return false;
  }

  static private boolean jj_3_28() {
    if (jj_scan_token(PLUS)) return true;
    if (jj_3R_10()) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_19()) jj_scanpos = xsp;
    return false;
  }

  static private boolean jj_3_5() {
    if (jj_3R_9()) return true;
    return false;
  }

  static private boolean jj_3_3() {
    if (jj_3R_9()) return true;
    return false;
  }

  static private boolean jj_3_2() {
    if (jj_3R_9()) return true;
    return false;
  }
